update several function in mobile.

--- a/app-sp/app/index.html
+++ b/app-sp/app/index.html
@@ -10,30 +10,31 @@
 
 <div id="main-wrapper">
     <div id="loader">
-        <div class="wrap go">
-            <div class="load-wrapper">
-                <div class="orbit">
-                    <div class="ball"></div>
-                    <div class="ball"></div>
-                    <div class="ball"></div>
-                    <div class="ball"></div>
-                </div>
-                <div class="loading">
-                    <span class="letter">-</span>
-                    <span class="letter"> </span>
-                    <span class="letter">L</span>
-                    <span class="letter">O</span>
-                    <span class="letter">A</span>
-                    <span class="letter">D</span>
-                    <span class="letter">I</span>
-                    <span class="letter">N</span>
-                    <span class="letter">G</span>
-                    <span class="letter"></span>
-                    <span class="letter">-</span>
+        <div id="loader-content">
+            <div class="wrap go">
+               <div class="load-wrapper">
+                    <div class="orbit">
+                        <div class="ball"></div>
+                        <div class="ball"></div>
+                        <div class="ball"></div>
+                        <div class="ball"></div>
+                    </div>
+                    <div class="loading">
+                        <span class="letter">-</span>
+                        <span class="letter"> </span>
+                        <span class="letter">L</span>
+                        <span class="letter">O</span>
+                        <span class="letter">A</span>
+                        <span class="letter">D</span>
+                        <span class="letter">I</span>
+                        <span class="letter">N</span>
+                        <span class="letter">G</span>
+                        <span class="letter"></span>
+                        <span class="letter">-</span>
+                    </div>
                 </div>
             </div>
         </div>
-
     </div>
 
     <div id="app"></div>
