add fullscreen class in main-wrapper for first loading cover animation.

--- a/app-sp/app/index.html
+++ b/app-sp/app/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<div id="main-wrapper">
+<div id="main-wrapper" class="full-screen" >
     <div id="loader">
         <div id="loader-content">
             <div class="wrap go">
