--- a/app/app/index.html
+++ b/app/app/index.html
@@ -10,6 +10,7 @@
 
 <div id="main-wrapper">
     <div id="loader">
+        <div class="loader-cover"></div>
         <div class="wrap go">
             <div class="load-wrapper">
                 <div class="orbit">
